crates/baton-tui/src/snapshots/baton_tui__tests_b2__gate_100.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, w, h)"
---
╭─ ◆ Gate para avanzar · Levantar servicios ───────────────────────────────────── <↻ Re-escanear> ─╮
│ modo        manual  [auto por servicio]                                                          │
│ condición   [todos pasan]  al menos N  críticos pasan                                            │
│ escaneo     services/*/docker-compose.yml · 4 servicios · hace 2 min                             │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│      servicio    tipo de check   objetivo                                                        │
│›[x]  api ★       [healthcheck]   definido en compose                                             │
│ [x]  web         [http]          [ http://{destino}:3000/health                                ] │
│ [x]  worker      [running]       sin puertos · contenedor arriba 30s                             │
│ [+]  notifier    [http]          nuevo · detectado en el escaneo                                 │
│ [+]  check extra                 comando o URL que no venga de un servicio                       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ por check   timeout [ 60s   ]   intentos [ 6   ]   (●) en paralelo                               │
│ al ejecutar (●) re-escanear antes de correr el gate                                              │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [r] re-escanear  [espacio] activar check  [e] editar check  [c] marcar crítico  [b] borrar check │
│ [x] quitar gate  [tab] sección  [esc] volver                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
